# advent_of_code

./: README.md
2018/: Pipfile
2019/04/: pyproject.toml
2019/04/04/: app.py
2019/04/tests/: test_04.py
2020/: common.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  main.py  pyproject.toml  settings.py  template.py
2020/01/: 01.py  app.py  common.py
2020/02/: app.py
2020/03/: app.py
2021/: common.py  day01.py  day02.py  day03.py  day04.py  day05.py  day05_input.txt  day06.py  day07.py  day08.py  day08_test_input.txt  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day17_input.txt  day18.py  day18_test_input.txt  day18_test_input_part1.txt  day18_test_input_part4.txt  day19.py  day20.py  day21.py  day22.py  day22.sqlite3  day22_sql.py  main.py  pyproject.toml  settings.py  template.py
2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day13_input.txt  day14.py  main.py  new_day.py  pyproject.toml  template.py
2022/done/: day01.py  day02.py  day03.py  day08.py  day10.py  day11.py  day13.py
2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  main.py  pyproject.toml
2023/done/: day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day08_test_input.txt  day13.py
2024/: .flake8  common.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  main.py  pyproject.toml
(+61 files in other folders)
