[tool.poetry]
name = "2020_aoc"
version = "0.1.0"
description = "2020 Advent of Code"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ptpython = "^3.0.7"
requests = "^2.25.0"
pyperclip = "^1.8.1"
attr = "^0.3.1"
attrs = "^20.3.0"
black = "^20.8b1"
networkx = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
