[tool.poetry]
name = "2023_aoc"
version = "0.1.0"
description = "2023 Advent of Code"
authors = ["kimv <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
rich = "^13.7.0"
attrs = "^23.1.0"
ptpython = "^3.0.23"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
