[tool.poetry]
name = "04"
version = "0.1.0"
description = ""
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
